--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,11 @@
     <groupId>io.github.jaceed</groupId>
     <artifactId>searchparser</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <name>search-parser</name>
+    <description>
+        A search helper including some string utils
+    </description>
     <url>http://maven.apache.org</url>
 
     <licenses>
@@ -21,10 +24,16 @@
         </developer>
     </developers>
     <scm>
-        <connection>scm:git@github.com:jaceed/SearchParser.git</connection>
-        <developerConnection>scm:git@github.com:jaceed/SearchParser.git</developerConnection>
-        <url>https://github.com/jaceed/SearchParser</url>
+        <connection>scm:git@github.com:JaceeDai/SearchParser.git</connection>
+        <developerConnection>scm:git@github.com:JaceeDai/SearchParser.git</developerConnection>
+        <url>https://github.com/JaceeDai/SearchParser</url>
     </scm>
+
+    <properties>
+        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -58,11 +67,11 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <finalName>final-${artifactId}-${version}</finalName>
+                            <finalName>final-${project.artifactId}-${project.version}</finalName>
                         </configuration>
                     </plugin>
 
-                    <plugin>
+<!--                    <plugin>
                         <groupId>com.github.wvengen</groupId>
                         <artifactId>proguard-maven-plugin</artifactId>
                         <executions>
@@ -74,15 +83,15 @@
                         <configuration>
                             <proguardVersion>4.5</proguardVersion>
                             <obfuscate>true</obfuscate>
-                            <injar>final-${artifactId}-${version}.jar</injar>
-                            <outjar>final-${artifactId}-${version}-small.jar</outjar>
+                            <injar>final-${project.artifactId}-${project.version}.jar</injar>
+                            <outjar>final-${project.artifactId}-${project.version}.jar</outjar>
                             <proguardInclude>proguard.conf</proguardInclude>
                             <libs>
                                 <lib>${java.home}/lib/rt.jar</lib>
                                 <lib>${java.home}/lib/jsse.jar</lib>
                             </libs>
                         </configuration>
-                    </plugin>
+                    </plugin>-->
 
                     <!-- Source -->
                     <plugin>
@@ -126,13 +135,24 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <!-- no pom -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <version>2.3.1</version>
+                        <configuration>
+                            <archive>
+                                <addMavenDescriptor>false</addMavenDescriptor>
+                            </archive>
+                        </configuration>
+                    </plugin>
 
                 </plugins>
             </build>
 
             <distributionManagement>
                 <snapshotRepository>
-                    <id>sonatype</id>
+                    <id>sonatype-snapshot</id>
                     <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                 </snapshotRepository>
                 <repository>
@@ -140,6 +160,19 @@
                     <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                 </repository>
             </distributionManagement>
+
+            <!--<distributionManagement>
+                <repository>
+                    <id>nexus-releases</id>
+                    <name>maven-releases</name>
+                    <url>http://localhost:8081/repository/maven-releases/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>nexus-snapshots</id>
+                    <name>maven-snapshots</name>
+                    <url>http://localhost:8081/repository/maven-snapshots/</url>
+                </snapshotRepository>
+            </distributionManagement>-->
         </profile>
     </profiles>
 
